# machine-auth

./: .bazelignore  .bazelrc  .clang-format  .firebaserc  .gitignore  .gitmodules  BUILD.bazel  CLAUDE.md  GEMINI.md  LICENSE  MODULE.bazel  README.md  REVIEW.md  dev.sh  firebase.e2e.json  firebase.json  machine-auth.code-workspace  operations  package-lock.json  package.json  pw  skills-lock.json  workflows.json
firmware/simulator/: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  run.sh
firmware/simulator/hal/: hardware_interface.h  simulator_hardware.cpp  simulator_hardware.h  time.cpp
firmware/simulator/mock/: mock_application.cpp  mock_application.h
maco_firmware/: BUILD.bazel  CLAUDE.md  hardware.h  types.h
maco_firmware/.claude/: settings.json
maco_firmware/apps/: BUILD.bazel
maco_firmware/apps/app_main/: BUILD.bazel  app_main.cc  app_main.h
maco_firmware/apps/dev/: BUILD.bazel  main.cc
maco_firmware/apps/factory/: BUILD.bazel  factory_test_service.cc  factory_test_service.h  factory_test_service.options  factory_test_service.proto  main.cc
maco_firmware/apps/personalize/: BUILD.bazel  key_updater.cc  key_updater.h  main.cc  personalization_keys.h  personalization_rpc_service.cc  personalization_rpc_service.h  personalization_verifier.cc  personalization_verifier.h  personalize_coordinator.cc  personalize_coordinator.h  sdm_configurator.cc  sdm_configurator.h  sdm_constants.cc  sdm_constants.h  sdm_constants_test.cc  tag_identifier.cc  tag_identifier.h  tag_prober.cc  tag_prober.h
maco_firmware/apps/prod/: BUILD.bazel  main.cc
maco_firmware/devices/: BUILD.bazel
maco_firmware/devices/cap_touch/: BUILD.bazel  cap1296.cc  cap1296.h  cap_touch_input_driver.cc  cap_touch_input_driver.h
maco_firmware/devices/in4818/: BUILD.bazel  hardware_test.cc  in4818_led_driver.h  spi_mosi_only_test.cc
maco_firmware/devices/pico_res28_lcd/: BUILD.bazel  hardware_test.cc  pico_res28_lcd_driver.cc  pico_res28_lcd_driver.h  pico_res28_lcd_driver_test.cc
maco_firmware/devices/pn532/: BUILD.bazel  hardware_test.cc  pn532_await_idle_future.cc  pn532_await_idle_future.h  pn532_call_future.cc  pn532_call_future.h  pn532_check_present_future.cc  pn532_check_present_future.h  pn532_command.cc  pn532_command.h  pn532_command_test.cc  pn532_constants.h  pn532_detect_tag_future.cc  pn532_detect_tag_future.h  pn532_driver.cc  pn532_driver.h  pn532_driver_test.cc  pn532_event_test.cc  pn532_fsm_test.cc  pn532_nfc_reader.cc  pn532_nfc_reader.h  pn532_nfc_reader_fsm.cc  pn532_nfc_reader_fsm.h  pn532_transceive_future.cc  pn532_transceive_future.h  tag_info.h
maco_firmware/lvgl_config/: BUILD.bazel  lv_conf.bzl  lv_conf.h.template
maco_firmware/modules/: BUILD.bazel
maco_firmware/modules/app_state/: BUILD.bazel  app_state.cc  app_state.h  app_state_test.cc  auth_cache.h  auth_cache_test.cc  nfc_event_handler.cc  nfc_event_handler.h  session_controller.cc  session_controller.h  session_event_pump.cc  session_event_pump.h  session_events.h  session_fsm.cc  session_fsm.h  session_fsm_test.cc  state_id.h  system_monitor_backend.h  system_state.cc  system_state.h  system_state_updater.h  tag_verification_state.h  tag_verifier.cc  tag_verifier.h  tag_verifier_observer.h  tag_verifier_test.cc
maco_firmware/modules/async_util/: BUILD.bazel  value_or_timeout_test.cc
maco_firmware/modules/buzzer/: BUILD.bazel  tone_buzzer.cc  tone_buzzer.h
maco_firmware/modules/device_config/: BUILD.bazel  device_config.cc
maco_firmware/modules/device_secrets/: BUILD.bazel  device_secrets.options  device_secrets.proto  device_secrets_eeprom.cc  device_secrets_eeprom.h  device_secrets_eeprom_test.cc  device_secrets_mock.cc  device_secrets_mock.h  device_secrets_service.cc  device_secrets_service.h  device_secrets_service.options  device_secrets_service.proto
maco_firmware/modules/display/: BUILD.bazel  display.cc  display.h  display_driver.h  display_metrics.cc  display_metrics.h  touch_button_driver.h
maco_firmware/modules/firebase/: BUILD.bazel  firebase_client.cc  firebase_client_test.cc
maco_firmware/modules/fonts/: BUILD.bazel  roboto_12.c  roboto_24.c
maco_firmware/modules/gateway/: BUILD.bazel  derive_ascon_key.cc  derive_ascon_key.h  gateway_connection_check.cc  gateway_connection_check_test.cc  host_gateway_client.cc  host_gateway_client.h  p2_gateway_client.cc  p2_gateway_client.h
maco_firmware/modules/led/: BUILD.bazel  led.h  led_driver.h  led_frame_renderer.h
maco_firmware/modules/led_animator/: BUILD.bazel  ambient_effects.h  button_effects.h  led_animator.h  nfc_effects.h  waveform.h
maco_firmware/modules/machine_control/: BUILD.bazel  default_machine_sensor.cc  default_machine_sensor.h  (+12 more)
maco_firmware/protos/: BUILD.bazel  maco_service.options  maco_service.proto  nfc_mock_service.options  nfc_mock_service.proto  personalization_service.options  personalization_service.proto
maco_firmware/services/: BUILD.bazel  maco_service.cc  maco_service.h
maco_firmware/system/: BUILD.bazel  psram.h  system.h
maco_firmware/targets/: BUILD.bazel
maco_firmware/tools/: BUILD.bazel
maco_gateway/: .env.local  BUILD.bazel
maco_gateway/maco_gateway/: __init__.py  ascon_transport.py  firebase_client.py  gateway_service.py  key_store.py  main.py  print_worker.py  printer.py  printer_status.py  test_warm.py  warm.py
maco_gateway/tools/: laser_diag.py  probe_laser.py
proto/: BUILD.bazel  common.options  common.proto  common.pwpb_options
proto/firebase_rpc/: BUILD.bazel  auth.options  auth.proto  auth.pwpb_options  personalization.proto  session.proto  usage.options  usage.proto
proto/gateway/: BUILD.bazel  gateway_service.options  gateway_service.proto
proto/particle/: BUILD.bazel  device_config.options  device_config.proto
proto/pw_protobuf_protos/: field_options.proto
tools/: BUILD.bazel  bazel  console.py  device_sim.py  elf_memory_analysis.py  factory_console.py  factory_test_pane.py  gen_token_db.sh  ntag_key_diversification.py  ntag_key_diversification_test.py  personalize_console.py  personalize_pane.py  requirements_lock.txt  switch_platform.sh
(+1577 files in other folders)
