# Copyright Offene Werkstatt Wädenswil
# SPDX-License-Identifier: MIT

load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")
load("@pigweed//pw_build:compatibility.bzl", "incompatible_with_mcu")

package(default_visibility = ["//visibility:public"])

# Generates compile_commands.json for IDE code intelligence
# Usage:
#   bazel run //:refresh_compile_commands
#
# After running, switch between target groups in your IDE:
#   - "host": For host-based development and testing
#   - "p2": For Particle P2 firmware analysis
refresh_compile_commands(
    name = "refresh_compile_commands",
    out_dir = ".compile_commands",
    target_compatible_with = incompatible_with_mcu(),
    target_groups = {
        "host": [
            "//maco_firmware/apps/dev:simulator",
        ],
        "p2": [
            "//maco_firmware/apps/dev:dev",
        ],
    },
)
