# Copyright Offene Werkstatt Wädenswil
# SPDX-License-Identifier: MIT

load("@bazel_skylib//rules:native_binary.bzl", "native_binary")

package(default_visibility = ["//visibility:public"])

# Pigweed workflows launcher for ./pw script
#
# The ./pw script runs bazel in an isolated environment that doesn't
# update compile_commands. Use for flash and sanitizer builds.
# See docs/adr/0009-local-build-flash-tooling.md
#
# Usage:
#   ./pw flash              - Flash firmware to device
#   ./pw build host         - Build simulator
#   ./pw build p2           - Build P2 firmware
#   ./pw build asan         - Address Sanitizer build
#   ./pw build default      - Run all builds in default group
native_binary(
    name = "pw",
    src = "@pigweed//pw_build/py:workflows_launcher",
)
