module(
    name = "machine_auth",
    version = "0.0.1",
)

# Standard dependencies
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.4")
bazel_dep(name = "bazel_skylib", version = "1.8.1")

# JavaScript toolchain for lv_font_conv
bazel_dep(name = "aspect_rules_js", version = "2.4.0")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//third_party/lv_font_conv:pnpm-lock.yaml",
    bins = {
        "lv_font_conv": ["lv_font_conv=./lv_font_conv.js"],
    },
)
use_repo(npm, "npm")

# Particle Bazel rules
bazel_dep(name = "particle_bazel")
local_path_override(
    module_name = "particle_bazel",
    path = "third_party/particle",
)

# Pigweed - root-level third_party
bazel_dep(name = "pigweed")
local_path_override(
    module_name = "pigweed",
    path = "third_party/pigweed",
)

# LVGL graphics library
bazel_dep(name = "lvgl")
local_path_override(
    module_name = "lvgl",
    path = "third_party/lvgl",
)

# System SDL2 library (for host simulator)
# Requires: apt install libsdl2-dev
new_local_repository = use_repo_rule(
    "@bazel_tools//tools/build_defs/repo:local.bzl",
    "new_local_repository",
)
new_local_repository(
    name = "sdl2_system",
    path = "/usr/lib/x86_64-linux-gnu",
    build_file = "//third_party/sdl:sdl2_system.BUILD",
)
