module(
    name = "machine_auth",
    version = "0.0.1",
)

# Standard dependencies
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.4")
bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "rules_python", version = "0.40.0")
bazel_dep(name = "rules_pkg", version = "1.0.1")

# Python dependencies for maco_gateway and tests
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "maco_pip",
    python_version = "3.11",
    requirements_lock = "//tools:requirements_lock.txt",
)
use_repo(pip, "maco_pip")

# Crypto library (used by NFC authentication)
bazel_dep(name = "mbedtls", version = "3.6.0")

# Protocol Buffers (for firmware <-> cloud communication)
bazel_dep(name = "protobuf", version = "29.0", repo_name = "com_google_protobuf")

# JavaScript toolchain for lv_font_conv
bazel_dep(name = "aspect_rules_js", version = "2.4.0")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//third_party/lvgl:pnpm-lock.yaml",
    bins = {
        "lv_font_conv": ["lv_font_conv=./lv_font_conv.js"],
    },
)
use_repo(npm, "npm")

# Particle Bazel rules
bazel_dep(name = "particle_bazel")
local_path_override(
    module_name = "particle_bazel",
    path = "third_party/particle",
)

# Pigweed - fetched by Bazel with a local patch on top.
# The submodule under third_party/pigweed is kept for IDE/source browsing
# only; Bazel uses the version checked out below.
# Drop `patches` once upstream lands the equivalent fix; see the patch file
# header for context.
bazel_dep(name = "pigweed")
git_override(
    module_name = "pigweed",
    remote = "https://pigweed.googlesource.com/pigweed/pigweed",
    commit = "964e9074e400c27cceff0f5587f981adcd861d04",
    patches = ["//third_party/pigweed_patches:fallible_coro_task_default.patch"],
    patch_strip = 1,
)

# System SDL2 library (for host simulator)
# Requires: apt install libsdl2-dev
new_local_repository = use_repo_rule(
    "@bazel_tools//tools/build_defs/repo:local.bzl",
    "new_local_repository",
)
new_local_repository(
    name = "sdl2_system",
    path = "/usr/lib/x86_64-linux-gnu",
    build_file = "//third_party/sdl:sdl2_system.BUILD",
)
