# Copyright Offene Werkstatt Wädenswil
# SPDX-License-Identifier: MIT

# MACO Gateway - pw_rpc proxy between MACO devices and Firebase
#
# The gateway:
# - Listens for connections from MACO devices over TCP
# - Decrypts ASCON-encrypted frames
# - Forwards requests to Firebase via HTTPS
# - Returns encrypted responses to devices

load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "gateway_lib",
    srcs = [
        "maco_gateway/__init__.py",
        "maco_gateway/ascon_transport.py",
        "maco_gateway/firebase_client.py",
        "maco_gateway/gateway_service.py",
        "maco_gateway/key_store.py",
        # Label printing (#313 follow-up). The google-cloud-firestore import
        # is deferred to PrintWorker.run, so the Bazel target needs no extra
        # pip dep unless a printer is actually configured at runtime.
        "maco_gateway/print_worker.py",
        "maco_gateway/printer.py",
        "maco_gateway/printer_status.py",
        # Machine-activity sensing (ADR-0035). Pure stdlib asyncio (TLS
        # WebSocket to the device is hand-rolled), so no extra pip dep.
        "maco_gateway/sensing/__init__.py",
        "maco_gateway/sensing/backends.py",
        "maco_gateway/sensing/service.py",
        "maco_gateway/sensing/wsv2.py",
        # Keep-warm pinger for the Firebase api function (ADR-0037).
        "maco_gateway/warm.py",
    ],
    imports = ["."],  # Makes maco_gateway package importable
    deps = [
        "//proto/gateway:gateway_service_py_pb2",
        "@maco_pip//httpx",
        "@maco_pip//ascon",
        "@pigweed//pw_hdlc/py:pw_hdlc",
        "@pigweed//pw_rpc/py:pw_rpc",
    ],
)

[
    py_test(
        name = name,
        srcs = ["maco_gateway/sensing/%s.py" % name],
        main = "maco_gateway/sensing/%s.py" % name,
        deps = [":gateway_lib"],
    )
    for name in [
        "test_wsv2",
        "test_backends",
        "test_service",
    ]
]

py_test(
    name = "test_warm",
    srcs = ["maco_gateway/test_warm.py"],
    main = "maco_gateway/test_warm.py",
    deps = [":gateway_lib"],
)

# On-site laser probe: connects the xTool backend directly to a laser and prints
# its live SensingState. Fastest way to re-validate the protocol at the makerspace.
py_binary(
    name = "probe_laser",
    srcs = ["tools/probe_laser.py"],
    main = "tools/probe_laser.py",
    deps = [":gateway_lib"],
)

# Test fixtures for integration tests
py_library(
    name = "fixtures",
    srcs = [
        "maco_gateway/fixtures/__init__.py",
        "maco_gateway/fixtures/gateway_process.py",
        "maco_gateway/fixtures/mock_http_server.py",
    ],
    imports = ["."],
    deps = [],
)

py_binary(
    name = "gateway",
    srcs = ["maco_gateway/main.py"],
    main = "maco_gateway/main.py",
    data = glob(
        [".env.*"],  # .env.local plus overlay envs like .env.staging (ADR-0034)
        allow_empty = True,  # Generated by scripts/generate-env.ts; run npm run generate-env
    ),
    deps = [
        ":gateway_lib",
        "@maco_pip//python_dotenv",
    ],
)

# Deployable tarball for Raspberry Pi (includes py_binary + all runfiles)
pkg_tar(
    name = "gateway_tar",
    srcs = [":gateway"],
    include_runfiles = True,
    strip_prefix = ".",
    package_dir = "gateway",
)
