# Copyright Offene Werkstatt Wädenswil
# SPDX-License-Identifier: MIT

load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")
load(
    "@pigweed//pw_protobuf_compiler:pw_proto_library.bzl",
    "nanopb_proto_library",
    "pw_proto_filegroup",
)

package(default_visibility = ["//visibility:public"])

# Common types shared across all proto definitions
pw_proto_filegroup(
    name = "common_proto_and_options",
    srcs = ["common.proto"],
    options_files = ["common.options"],
)

proto_library(
    name = "common_proto",
    srcs = [":common_proto_and_options"],
    strip_import_prefix = "/proto",
)

nanopb_proto_library(
    name = "common_nanopb",
    deps = [":common_proto"],
)
