# Copyright Offene Werkstatt Wädenswil
# SPDX-License-Identifier: MIT

load("@rules_python//python:defs.bzl", "py_binary")

package(default_visibility = ["//visibility:public"])

py_binary(
    name = "console",
    srcs = ["console.py"],
    deps = [
        "//maco_firmware/protos:py_pb2",
        "@pigweed//pw_system/py:pw_system_lib",
    ],
)

py_binary(
    name = "device_sim",
    srcs = ["device_sim.py"],
    deps = [
        "//maco_firmware/protos:py_pb2",
        "@pigweed//pw_system/py:pw_system_lib",
    ],
)
