# Copyright Offene Werkstatt Wädenswil
# SPDX-License-Identifier: MIT

load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

package(default_visibility = ["//visibility:public"])

py_binary(
    name = "console",
    srcs = ["console.py"],
    deps = [
        "//maco_firmware/protos:nfc_mock_service_py_pb2",
        "//maco_firmware/protos:personalization_service_py_pb2",
        "//maco_firmware/protos:py_pb2",
        "@pigweed//pw_system/py:pw_system_lib",
    ],
)

py_library(
    name = "ntag_key_diversification",
    srcs = ["ntag_key_diversification.py"],
    imports = ["."],
    deps = ["@maco_pip//pycryptodome"],
)

py_test(
    name = "ntag_key_diversification_test",
    srcs = ["ntag_key_diversification_test.py"],
    deps = [":ntag_key_diversification"],
)

py_binary(
    name = "factory_console",
    srcs = [
        "factory_console.py",
        "factory_test_pane.py",
    ],
    deps = [
        "//maco_firmware/apps/factory:factory_test_service_py_pb2",
        "//maco_firmware/modules/device_secrets:device_secrets_service_py_pb2",
        "//maco_firmware/protos:py_pb2",
        "@pigweed//pw_console/py:pw_console",
        "@pigweed//pw_system/py:pw_system_lib",
    ],
)

py_binary(
    name = "personalize_console",
    srcs = [
        "personalize_console.py",
        "personalize_pane.py",
    ],
    deps = [
        ":ntag_key_diversification",
        "//maco_firmware/protos:personalization_service_py_pb2",
        "//maco_firmware/protos:py_pb2",
        "@pigweed//pw_console/py:pw_console",
        "@pigweed//pw_system/py:pw_system_lib",
    ],
)

py_binary(
    name = "device_sim",
    srcs = ["device_sim.py"],
    deps = [
        ":ntag_key_diversification",
        "//maco_firmware/protos:nfc_mock_service_py_pb2",
        "//maco_firmware/protos:py_pb2",
        "@pigweed//pw_system/py:pw_system_lib",
    ],
)
