# Copyright Offene Werkstatt Wädenswil
# SPDX-License-Identifier: MIT

load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")
load(
    "@pigweed//pw_protobuf_compiler:pw_proto_library.bzl",
    "nanopb_proto_library",
    "nanopb_rpc_proto_library",
    "pw_proto_filegroup",
)
load("@rules_python//python:proto.bzl", "py_proto_library")

package(default_visibility = ["//maco_firmware:__subpackages__"])

pw_proto_filegroup(
    name = "maco_service_proto_and_options",
    srcs = ["maco_service.proto"],
    options_files = ["maco_service.options"],
)

proto_library(
    name = "maco_service_proto",
    srcs = [":maco_service_proto_and_options"],
    # import_prefix controls the Python import path: from maco_pb import maco_service_pb2
    import_prefix = "maco_pb",
    strip_import_prefix = "/maco_firmware/protos",
)

nanopb_proto_library(
    name = "maco_service_nanopb",
    deps = [":maco_service_proto"],
)

nanopb_rpc_proto_library(
    name = "maco_service_nanopb_rpc",
    nanopb_proto_library_deps = [":maco_service_nanopb"],
    deps = [":maco_service_proto"],
)

# Python proto bindings for pw_console
py_proto_library(
    name = "py_pb2",
    visibility = ["//visibility:public"],
    deps = [":maco_service_proto"],
)

# NFC Mock Service - for simulating NFC events in host simulator
pw_proto_filegroup(
    name = "nfc_mock_service_proto_and_options",
    srcs = ["nfc_mock_service.proto"],
    options_files = ["nfc_mock_service.options"],
)

proto_library(
    name = "nfc_mock_service_proto",
    srcs = [":nfc_mock_service_proto_and_options"],
    import_prefix = "maco_pb",
    strip_import_prefix = "/maco_firmware/protos",
)

nanopb_proto_library(
    name = "nfc_mock_service_nanopb",
    deps = [":nfc_mock_service_proto"],
)

nanopb_rpc_proto_library(
    name = "nfc_mock_service_nanopb_rpc",
    nanopb_proto_library_deps = [":nfc_mock_service_nanopb"],
    deps = [":nfc_mock_service_proto"],
)

# Python proto bindings for NFC Mock Service
py_proto_library(
    name = "nfc_mock_service_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":nfc_mock_service_proto"],
)

# Personalization Service - for tag key provisioning
pw_proto_filegroup(
    name = "personalization_service_proto_and_options",
    srcs = ["personalization_service.proto"],
    options_files = ["personalization_service.options"],
)

proto_library(
    name = "personalization_service_proto",
    srcs = [":personalization_service_proto_and_options"],
    import_prefix = "maco_pb",
    strip_import_prefix = "/maco_firmware/protos",
)

nanopb_proto_library(
    name = "personalization_service_nanopb",
    deps = [":personalization_service_proto"],
)

nanopb_rpc_proto_library(
    name = "personalization_service_nanopb_rpc",
    nanopb_proto_library_deps = [":personalization_service_nanopb"],
    deps = [":personalization_service_proto"],
)

py_proto_library(
    name = "personalization_service_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":personalization_service_proto"],
)
