# System abstraction layer
# Defines the platform contract that targets must implement
#
# Pattern:
# - Headers define interfaces (system.h, worker.h, etc.)
# - Each target (host, p2) provides implementation
# - Apps depend on system headers, get platform impl at link time

package(default_visibility = ["//maco_firmware:__subpackages__"])

# System contract headers
# cc_library(
#     name = "headers",
#     hdrs = [
#         "system.h",
#     ],
#     deps = [
#         "//maco_firmware/modules/...",
#     ],
# )

# System implementation - selected via target
# Actual implementation provided by //maco_firmware/targets/{platform}:system
# cc_library(
#     name = "system",
#     deps = select({
#         "//maco_firmware/targets/p2:is_p2": ["//maco_firmware/targets/p2:system"],
#         "//maco_firmware/targets/host:is_host": ["//maco_firmware/targets/host:system"],
#     }),
# )
