# Copyright Offene Werkstatt Wädenswil
# SPDX-License-Identifier: MIT

load("@pigweed//pw_build:compatibility.bzl", "host_backend_alias")
load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//maco_firmware:__subpackages__"])

# System contract headers
cc_library(
    name = "headers",
    hdrs = [
        "system.h",
    ],
    includes = [".."],  # Allow includes like "maco_firmware/system/system.h"
    deps = [
        "@pigweed//pw_function",
        "@pigweed//pw_thread:options",
    ],
)

label_flag(
    name = "system",
    build_setting_default = ":unspecified_backend",
)

host_backend_alias(
    name = "unspecified_backend",
    backend = "//maco_firmware/targets/host:system",
)
