# Copyright Offene Werkstatt Wädenswil
# SPDX-License-Identifier: MIT

load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")
load(
    "@pigweed//pw_protobuf_compiler:pw_proto_library.bzl",
    "nanopb_proto_library",
    "pw_proto_filegroup",
)

package(default_visibility = ["//visibility:public"])

# Authentication RPCs (terminal checkin, tag auth, session keys)
pw_proto_filegroup(
    name = "auth_proto_and_options",
    srcs = ["auth.proto"],
    options_files = ["auth.options"],
)

proto_library(
    name = "auth_proto",
    srcs = [":auth_proto_and_options"],
    strip_import_prefix = "/proto",
    deps = ["//proto:common_proto"],
)

nanopb_proto_library(
    name = "auth_nanopb",
    deps = [":auth_proto"],
)

# Machine usage tracking
proto_library(
    name = "usage_proto",
    srcs = ["usage.proto"],
    strip_import_prefix = "/proto",
    deps = ["//proto:common_proto"],
)

nanopb_proto_library(
    name = "usage_nanopb",
    deps = [":usage_proto"],
)

# Tag personalization / key diversification
proto_library(
    name = "personalization_proto",
    srcs = ["personalization.proto"],
    strip_import_prefix = "/proto",
    deps = ["//proto:common_proto"],
)

nanopb_proto_library(
    name = "personalization_nanopb",
    deps = [":personalization_proto"],
)
