# Copyright Offene Werkstatt Wädenswil
# SPDX-License-Identifier: MIT

load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")
load(
    "@pigweed//pw_protobuf_compiler:pw_proto_library.bzl",
    "nanopb_proto_library",
    "pw_proto_filegroup",
)

package(default_visibility = ["//visibility:public"])

# Device configuration for Particle Ledger
pw_proto_filegroup(
    name = "device_config_proto_and_options",
    srcs = ["device_config.proto"],
    options_files = ["device_config.options"],
)

proto_library(
    name = "device_config_proto",
    srcs = [":device_config_proto_and_options"],
    strip_import_prefix = "/proto",
)

nanopb_proto_library(
    name = "device_config_nanopb",
    deps = [":device_config_proto"],
)
